compiler/tests/en/errors/noret_rettype.salam
// EXPECT: E012
noret func bad() : int:
    while true:
    end
end

func main:
    bad()
end
